banner section responsive

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
         <div class="banner-container flex flex-col gap-8 lg:flex-row-reverse lg:justify-center lg:items-center">
 
           <!-- banner image -->
-          <div class="image-content w-10/12  m-auto lg:w-2/4 lg:justify-center lg:items-center lg:flex">
-            <img class="lg:w-[90%]" src="images/summer.png" alt="" />
+          <div class="image-content w-10/12  m-auto lg:w-2/4 md:justify-center md:items-center md:flex">
+            <img class="lg:w-[90%] md:w-3/4" src="images/summer.png" alt="" />
           </div>
           <!-- banner text content -->
           <div class="text-content space-y-8 text-center text-color-title lg:w-1/2">
-            <h3 class="text-xl font-medium">---SALE FEVER---</h3>
-            <h1 class="font-bold text-3xl">
+            <h3 class="text-xl lg:text-2xl font-medium">---SALE FEVER---</h3>
+            <h1 class="font-bold text-3xl lg:text-4xl">
               Purchase TK 200 or <br> above & get
               <span class="text-color-primary"> 20% off</span>
             </h1>
             <div class="promo-section gap-4 flex justify-center items-center">
-              <h4 class="text-sm">Use Promo Code</h4>
+              <h4 class="text-sm lg:text-lg">Use Promo Code</h4>
               <button
-                class="bg-color-primary text-white px-4 py-2 rounded-xl font-semibold"
+                class="bg-color-primary text-white px-4 py-2 rounded-xl font-semibold lg:text-xl"
               >
                 SELL200
               </button>
