--- a/index.html
+++ b/index.html
@@ -45,21 +45,27 @@
     </script>
   </head>
   <body class="font-pop">
-    <header class="bg-[#F9F6E2] p-6 lg:px-[10%] lg:py-[7%]">
+    <header class="bg-[#F9F6E2] px-6 py-14 lg:px-[10%] lg:py-[7%]">
       <!-- Banner Section -->
       <section id="banner">
-           <!-- Banner Container -->
-        <div class="banner-container flex flex-col gap-8 lg:flex-row-reverse lg:justify-center lg:items-center">
-
+        <!-- Banner Container -->
+        <div
+          class="banner-container flex flex-col gap-8 lg:flex-row-reverse lg:justify-center lg:items-center"
+        >
           <!-- banner image -->
-          <div class="image-content w-10/12  m-auto lg:w-2/4 md:justify-center md:items-center md:flex">
+          <div
+            class="image-content w-10/12 m-auto lg:w-2/4 md:justify-center md:items-center md:flex"
+          >
             <img class="lg:w-[90%] md:w-3/4" src="images/summer.png" alt="" />
           </div>
           <!-- banner text content -->
-          <div class="text-content space-y-8 text-center text-color-title lg:w-1/2">
+          <div
+            class="text-content space-y-8 text-center text-color-title lg:w-1/2"
+          >
             <h3 class="text-xl lg:text-2xl font-medium">---SALE FEVER---</h3>
             <h1 class="font-bold text-3xl lg:text-4xl">
-              Purchase TK 200 or <br> above & get
+              Purchase TK 200 or <br />
+              above & get
               <span class="text-color-primary"> 20% off</span>
             </h1>
             <div class="promo-section gap-4 flex justify-center items-center">
@@ -71,11 +77,220 @@
               </button>
             </div>
           </div>
-         
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <section id="proudcts" class="bg-[#F8F8F8] px-6 py-14">
+        <div class="product-container">
+          <div class="product-card-container lg:w-9/12">
+            <!-- kitchenware section -->
+            <section id="kitchenware" class="mt-3">
+              <!-- Card Section Title -->
+              <h1 class="text-center text-2xl font-semibold py-4">
+                Kitchenware
+              </h1>
+              <!-- Card Container -->
+              <div class="card-container grid gap-10">
+                <!-- Kitchenware Card 1 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod1.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Wooden Kitchen Utensils</h1>
+                    <h3 class="text-[#11111150]"><span>39.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Kitchenware Card 2 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod2.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Kitchen Utensil Set</h1>
+
+                    <h3 class="text-[#11111150]"><span>25.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Kitchenware Card 3 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod3.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Home Cooker</h1>
+                    <h3 class="text-[#11111150]"><span>49.00</span> TK</h3>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!-- Sportswear Section -->
+            <section id="sportswear" class="mt-12">
+              <!-- Card Section Title -->
+              <h1 class="text-center text-2xl font-semibold py-4">
+                Sportswear
+              </h1>
+              <!-- Card Container -->
+              <div class="card-container grid gap-10">
+                <!-- Sportswear Card 1 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod4.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Sports Back Cap</h1>
+                    <h3 class="text-[#11111150]"><span>49.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Sportswear Card 2 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod5.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Full Jersey Set</h1>
+                    <h3 class="text-[#11111150]"><span>69.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Sportswear Card 3 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod6.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Sports Cates</h1>
+                    <h3 class="text-[#11111150]"><span>159.00</span> TK</h3>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+            <!-- Furniture Section -->
+            <section id="furniture" class="mt-12">
+              <!-- Card Section Title -->
+              <h1 class="text-center text-2xl font-semibold py-4">Furniture</h1>
+              <!-- Card Container -->
+              <div class="card-container grid gap-10">
+                <!-- Furniture Card 1 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod7.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-regular fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Single Relax Chair</h1>
+                    <h3 class="text-[#11111150]"><span>185.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Furniture Card 2 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod8.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Children play</h1>
+                    <h3 class="text-[#11111150]"><span>299.00</span> TK</h3>
+                  </div>
+                </div>
+                <!-- Furniture Card 3 -->
+                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                  <div
+                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                  >
+                    <img src="images/prod9.png" alt="" />
+                  </div>
+                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                    <div class="rating text-[#FFC107]">
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <h1 class="font-semibold">Flexible Sofa</h1>
+                    <h3 class="text-[#11111150]"><span>339.00</span> TK</h3>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+          <div class="shopping-card-container lg:w-3/12"></div>
+        </div>
+      </section>
+    </main>
 
     <script src="index.js"></script>
   </body>
