product section responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </script>
   </head>
   <body class="font-pop">
-    <header class="bg-[#F9F6E2] px-6 py-14 lg:px-[10%] lg:py-[7%]">
+    <header class="bg-[#F9F6E2] px-8 py-14 lg:px-[8%] lg:py-[7%]">
       <!-- Banner Section -->
       <section id="banner">
         <!-- Banner Container -->
@@ -68,7 +68,7 @@
               above & get
               <span class="text-color-primary"> 20% off</span>
             </h1>
-            <div class="promo-section gap-4 flex justify-center items-center">
+            <div class="promo-section gap-6 flex justify-center items-center">
               <h4 class="text-sm lg:text-lg">Use Promo Code</h4>
               <button
                 class="bg-color-primary text-white px-4 py-2 rounded-xl font-semibold lg:text-xl"
@@ -81,25 +81,34 @@
       </section>
     </header>
     <main>
-      <section id="proudcts" class="bg-[#F8F8F8] px-6 py-14">
-        <div class="product-container">
-          <div class="product-card-container lg:w-9/12">
+      <section
+        id="proudcts"
+        class="bg-[#F8F8F8] px-10 py-14 lg:px-[8%] lg:py-[7%]"
+      >
+        <div class="product-container lg:flex lg:gap-10">
+          <div class="product-card-container lg:w-[70%]">
             <!-- kitchenware section -->
             <section id="kitchenware" class="mt-3">
               <!-- Card Section Title -->
-              <h1 class="text-center text-2xl font-semibold py-4">
+              <h1
+                class="text-center text-3xl font-semibold py-4 lg:text-left py-4"
+              >
                 Kitchenware
               </h1>
-              <!-- Card Container -->
-              <div class="card-container grid gap-10">
+              <!--kitchenware Card Container -->
+              <div
+                class="card-container grid gap-6 md:grid-cols-2 lg:grid-cols-3"
+              >
                 <!-- Kitchenware Card 1 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod1.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -107,18 +116,20 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Wooden Kitchen Utensils</h1>
+                    <h1 class="font-semibold">Wooden Utensils</h1>
                     <h3 class="text-[#11111150]"><span>39.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Kitchenware Card 2 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod2.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
@@ -132,13 +143,15 @@
                   </div>
                 </div>
                 <!-- Kitchenware Card 3 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod3.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -156,19 +169,25 @@
             <!-- Sportswear Section -->
             <section id="sportswear" class="mt-12">
               <!-- Card Section Title -->
-              <h1 class="text-center text-2xl font-semibold py-4">
+              <h1
+                class="text-center text-3xl font-semibold py-4 lg:text-left py-4"
+              >
                 Sportswear
               </h1>
               <!-- Card Container -->
-              <div class="card-container grid gap-10">
+              <div
+                class="card-container grid gap-6 md:grid-cols-2 lg:grid-cols-3"
+              >
                 <!-- Sportswear Card 1 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod4.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -181,13 +200,15 @@
                   </div>
                 </div>
                 <!-- Sportswear Card 2 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod5.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -200,13 +221,15 @@
                   </div>
                 </div>
                 <!-- Sportswear Card 3 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod6.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -224,17 +247,23 @@
             <!-- Furniture Section -->
             <section id="furniture" class="mt-12">
               <!-- Card Section Title -->
-              <h1 class="text-center text-2xl font-semibold py-4">Furniture</h1>
+              <h1 class="text-center text-3xl font-semibold py-4 lg:text-left">
+                Furniture
+              </h1>
               <!-- Card Container -->
-              <div class="card-container grid gap-10">
+              <div
+                class="card-container grid gap-6 md:grid-cols-2 lg:grid-cols-3"
+              >
                 <!-- Furniture Card 1 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod7.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -247,13 +276,15 @@
                   </div>
                 </div>
                 <!-- Furniture Card 2 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod8.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -266,13 +297,15 @@
                   </div>
                 </div>
                 <!-- Furniture Card 3 -->
-                <div class="card bg-white p-5 rounded-xl drop-shadow-lg">
+                <div
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                >
                   <div
-                    class="product-image bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
+                    class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
                   >
                     <img src="images/prod9.png" alt="" />
                   </div>
-                  <div class="product-details text-center px-5 pt-5 space-y-1">
+                  <div class="product-details text-center pt-5 space-y-1">
                     <div class="rating text-[#FFC107]">
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
@@ -288,44 +321,66 @@
             </section>
           </div>
           <!-- Shopping Cart and Coupon Section -->
-          <div class="shopping-card-container mt-10 lg:w-3/12 ">
+          <div
+            class="shopping-card-container mt-16 lg:w-[30%] md:w-3/4 md:m-auto md:mt-20 font-medium"
+          >
             <div
-              class="coupon-container w-full bg-red-300 rounded-xl p-5 space-y-3"
+              class="coupon-container w-full bg-white rounded-xl p-5 space-y-3"
             >
               <h1 class="text">Have coupon?</h1>
               <div class="join">
                 <input
-                  class="input join-item w-1/2"
+                  class="input join-item w-3/4 border-2 border-slate-200 text-sm"
                   placeholder="Coupon Code"
                 />
                 <button
-                  class="btn join-item rounded-r-xl capitalize bg-color-primary border-0 text-white"
+                  disabled
+                  class="btn join-item rounded-r-xl capitalize bg-color-primary text-white hover:bg-color-primary focus:outline-none disabled:text-slate-400 disabled:bg-slate-200"
                 >
                   Apply
                 </button>
               </div>
             </div>
-            <div class="cart-container bg-red-300 mt-8 rounded-xl">
-              <div class="cart-items-container px-8 py-5">
-                <ol class="cart-items list-decimal border-b-2 border-[#11111150]">
+            <div class="cart-container bg-white mt-8 rounded-xl px-2">
+              <div class="cart-items-container px-5 py-5">
+                <ol
+                  class="cart-items list-decimal border-b-2 border-slate-200 pl-4 py-4 space-y-2"
+                >
                   <li>Home Cooker</li>
                   <li>Sports Cates</li>
                   <li>Home Cooker</li>
                 </ol>
-
               </div>
-              <div class="cart-price p-5">
-                <div class="total-cart-price border-b-2 border-[#11111150] ">
-                  <h2>Total Price: <span id="total"></span></h2>
-                  <h2>Discount: <span id="discount"></span></h2>
-                  <h2>Grand Total: <span id="grand-total"></span></h2>
+              <div class="cart-price px-5 w-full">
+                <div
+                  class="total-cart-price border-b-2 border-slate-200 pb-3 space-y-2"
+                >
+                  <h2>
+                    Total Price :
+                    <span id="total" class="text-[#11111150]">500.00 TK</span>
+                  </h2>
+                  <h2>
+                    Discount :
+                    <span id="discount" class="text-[#11111150]"
+                      >500.00 TK</span
+                    >
+                  </h2>
+                  <h2>
+                    Grand Total :
+                    <span id="grand-total" class="text-[#11111150]"
+                      >500.00 TK</span
+                    >
+                  </h2>
                 </div>
-               
-                <div class="buy-cta bg-red-300 text-center">
-                  <button class="bg-color-primary text-white translate-y-[95%] px-3 py-2 rounded-xl">Make Purchase</button>
+                <div class="buy-cta text-center translate-y-[50%]">
+                  <button
+                    disabled
+                    class="btn capitalize border-0 hover:bg-color-primary active:scale-105 bg-color-primary text-white px-3 py-2 rounded-xl w-11/12 disabled:text-slate-400 disabled:bg-slate-200"
+                  >
+                    Make Purchase
+                  </button>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
