--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <section id="kitchenware" class="mt-3">
               <!-- Card Section Title -->
               <h1
-                class="text-center text-3xl font-semibold py-4 lg:text-left py-4"
+                class="text-center text-3xl font-semibold py-4 lg:text-left"
               >
                 Kitchenware
               </h1>
@@ -101,7 +101,7 @@
               >
                 <!-- Kitchenware Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -116,13 +116,13 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Wooden Utensils</h1>
-                    <h3 class="text-[#11111150]"><span>39.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Wooden Utensils</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">39.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Kitchenware Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -137,14 +137,14 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Kitchen Utensil Set</h1>
+                    <h1 class="font-semibold product-name">Kitchen Utensil Set</h1>
 
-                    <h3 class="text-[#11111150]"><span>25.00</span> TK</h3>
+                    <h3 class="text-[#11111150]"><span class="product-price">25.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Kitchenware Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -159,8 +159,8 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Home Cooker</h1>
-                    <h3 class="text-[#11111150]"><span>49.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Home Cooker</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">49.00</span> TK</h3>
                   </div>
                 </div>
               </div>
@@ -170,7 +170,7 @@
             <section id="sportswear" class="mt-12">
               <!-- Card Section Title -->
               <h1
-                class="text-center text-3xl font-semibold py-4 lg:text-left py-4"
+                class="text-center text-3xl font-semibold lg:text-left py-4"
               >
                 Sportswear
               </h1>
@@ -180,7 +180,7 @@
               >
                 <!-- Sportswear Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -195,13 +195,13 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Sports Back Cap</h1>
-                    <h3 class="text-[#11111150]"><span>49.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Sports Back Cap</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">49.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Sportswear Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -216,13 +216,13 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Full Jersey Set</h1>
-                    <h3 class="text-[#11111150]"><span>69.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Full Jersey Set</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">69.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Sportswear Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -237,8 +237,8 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Sports Cates</h1>
-                    <h3 class="text-[#11111150]"><span>159.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Sports Cates</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">159.00</span> TK</h3>
                   </div>
                 </div>
               </div>
@@ -256,7 +256,7 @@
               >
                 <!-- Furniture Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -271,13 +271,13 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Single Relax Chair</h1>
-                    <h3 class="text-[#11111150]"><span>185.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Single Relax Chair</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">185.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Furniture Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -292,13 +292,13 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Children play</h1>
-                    <h3 class="text-[#11111150]"><span>299.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Children play</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">299.00</span> TK</h3>
                   </div>
                 </div>
                 <!-- Furniture Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -313,8 +313,8 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-solid fa-star"></i>
                     </div>
-                    <h1 class="font-semibold">Flexible Sofa</h1>
-                    <h3 class="text-[#11111150]"><span>339.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">Flexible Sofa</h1>
+                    <h3 class="text-[#11111150]"><span class="product-price">339.00</span> TK</h3>
                   </div>
                 </div>
               </div>
@@ -357,28 +357,54 @@
                 >
                   <h2>
                     Total Price :
-                    <span id="total" class="text-[#11111150]">500.00 TK</span>
+                    <span id="total" class="text-[#11111150]">00.00 TK</span>
                   </h2>
                   <h2>
                     Discount :
                     <span id="discount" class="text-[#11111150]"
-                      >500.00 TK</span
+                      >00.00 TK</span
                     >
                   </h2>
                   <h2>
                     Grand Total :
                     <span id="grand-total" class="text-[#11111150]"
-                      >500.00 TK</span
+                      >00.00 TK</span
                     >
                   </h2>
                 </div>
                 <div class="buy-cta text-center translate-y-[50%]">
                   <button
-                    disabled
+                    onclick="my_modal_2.showModal()"
                     class="btn capitalize border-0 hover:bg-color-primary active:scale-105 bg-color-primary text-white px-3 py-2 rounded-xl w-11/12 disabled:text-slate-400 disabled:bg-slate-200"
                   >
                     Make Purchase
                   </button>
+                  <!-- Open the modal using ID.showModal() method -->
+                  <dialog id="my_modal_2" class="modal">
+                    <form
+                      method="dialog"
+                      class="modal-box w-3/4 lg:w-5/12 p-5 px-10 lg:p-16"
+                    >
+                    <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                      <div
+                        class="modal-content flex justify-center items-center flex-col space-y-4"
+                      >
+                        <img class="h-24" src="images/congo.png" alt="congo" />
+                        <h1 class="text-2xl lg:text-3xl">Congratulations</h1>
+                        <p class="text-color-sub-title">
+                          Your order is completed!
+                        </p>
+                        <button
+                          class="btn text-white bg-color-primary hover:bg-color-primary px-8"
+                        >
+                          <a href="/">Go Home</a>
+                        </button>
+                      </div>
+                    </form>
+                    <form method="dialog" class="modal-backdrop">
+                      <button></button>
+                    </form>
+                  </dialog>
                 </div>
               </div>
             </div>
