--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div
             class="image-content w-10/12 m-auto lg:w-2/4 md:justify-center md:items-center md:flex"
           >
-            <img class="lg:w-[90%] md:w-3/4" src="images/summer.png" alt="" />
+            <img class="lg:w-[90%] md:w-[50%]" src="images/summer.png" alt="" />
           </div>
           <!-- banner text content -->
           <div
@@ -70,11 +70,11 @@
             </h1>
             <div class="promo-section gap-6 flex justify-center items-center">
               <h4 class="text-sm lg:text-lg">Use Promo Code</h4>
-              <button
+              <div
                 class="bg-color-primary text-white px-4 py-2 rounded-xl font-semibold lg:text-xl"
               >
                 SELL200
-              </button>
+              </but>
             </div>
           </div>
         </div>
@@ -329,12 +329,14 @@
             >
               <h1 class="text">Have coupon?</h1>
               <div class="join">
-                <input
+                <input id="coupon-input"
                   class="input join-item w-3/4 border-2 border-slate-200 text-sm"
                   placeholder="Coupon Code"
                 />
                 <button
-                  disabled
+                disabled
+                id="coupon-btn"
+                  onclick="applyCoupon()"
                   class="btn join-item rounded-r-xl capitalize bg-color-primary text-white hover:bg-color-primary focus:outline-none disabled:text-slate-400 disabled:bg-slate-200"
                 >
                   Apply
@@ -344,7 +346,7 @@
             <div class="cart-container bg-white mt-8 rounded-xl px-2">
               <div class="cart-items-container px-5 py-5">
                 <ol
-                  class="cart-items list-decimal border-b-2 border-slate-200 pl-4 py-4 space-y-2"
+                  class="cart-items list-decimal  list-inside border-b-2 border-slate-200 py-4 space-y-2"
                 >
                   <li>Home Cooker</li>
                   <li>Sports Cates</li>
@@ -374,6 +376,7 @@
                 </div>
                 <div class="buy-cta text-center translate-y-[50%]">
                   <button
+                  id="buy-btn" disabled
                     onclick="my_modal_2.showModal()"
                     class="btn capitalize border-0 hover:bg-color-primary active:scale-105 bg-color-primary text-white px-3 py-2 rounded-xl w-11/12 disabled:text-slate-400 disabled:bg-slate-200"
                   >
