modal section done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 class="bg-color-primary text-white px-4 py-2 rounded-xl font-semibold lg:text-xl"
               >
                 SELL200
-              </but>
+              </div>
             </div>
           </div>
         </div>
@@ -90,9 +90,7 @@
             <!-- kitchenware section -->
             <section id="kitchenware" class="mt-3">
               <!-- Card Section Title -->
-              <h1
-                class="text-center text-3xl font-semibold py-4 lg:text-left"
-              >
+              <h1 class="text-center text-3xl font-semibold py-4 lg:text-left">
                 Kitchenware
               </h1>
               <!--kitchenware Card Container -->
@@ -101,7 +99,8 @@
               >
                 <!-- Kitchenware Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -117,12 +116,15 @@
                       <i class="fa-regular fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Wooden Utensils</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">39.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">39.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Kitchenware Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -137,14 +139,19 @@
                       <i class="fa-regular fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold product-name">Kitchen Utensil Set</h1>
+                    <h1 class="font-semibold product-name">
+                      Kitchen Utensil Set
+                    </h1>
 
-                    <h3 class="text-[#11111150]"><span class="product-price">25.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">25.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Kitchenware Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -160,7 +167,9 @@
                       <i class="fa-regular fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Home Cooker</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">49.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">49.00</span> TK
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -169,9 +178,7 @@
             <!-- Sportswear Section -->
             <section id="sportswear" class="mt-12">
               <!-- Card Section Title -->
-              <h1
-                class="text-center text-3xl font-semibold lg:text-left py-4"
-              >
+              <h1 class="text-center text-3xl font-semibold lg:text-left py-4">
                 Sportswear
               </h1>
               <!-- Card Container -->
@@ -180,7 +187,8 @@
               >
                 <!-- Sportswear Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -196,12 +204,15 @@
                       <i class="fa-regular fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Sports Back Cap</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">49.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">49.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Sportswear Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -217,12 +228,15 @@
                       <i class="fa-regular fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Full Jersey Set</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">69.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">69.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Sportswear Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -238,7 +252,9 @@
                       <i class="fa-regular fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Sports Cates</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">159.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">159.00</span> TK
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -256,7 +272,8 @@
               >
                 <!-- Furniture Card 1 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -271,13 +288,18 @@
                       <i class="fa-solid fa-star"></i>
                       <i class="fa-regular fa-star"></i>
                     </div>
-                    <h1 class="font-semibold product-name">Single Relax Chair</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">185.00</span> TK</h3>
+                    <h1 class="font-semibold product-name">
+                      Single Relax Chair
+                    </h1>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">185.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Furniture Card 2 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -293,12 +315,15 @@
                       <i class="fa-solid fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Children play</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">299.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">299.00</span> TK
+                    </h3>
                   </div>
                 </div>
                 <!-- Furniture Card 3 -->
                 <div
-                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]" onclick="addToCart(this)"
+                  class="card bg-white p-4 rounded-xl drop-shadow-lg h-[350px]"
+                  onclick="addToCart(this)"
                 >
                   <div
                     class="product-image h-[60%] bg-[#EBEBEB] flex justify-center items-center p-5 rounded-xl"
@@ -314,7 +339,9 @@
                       <i class="fa-solid fa-star"></i>
                     </div>
                     <h1 class="font-semibold product-name">Flexible Sofa</h1>
-                    <h3 class="text-[#11111150]"><span class="product-price">339.00</span> TK</h3>
+                    <h3 class="text-[#11111150]">
+                      <span class="product-price">339.00</span> TK
+                    </h3>
                   </div>
                 </div>
               </div>
@@ -329,13 +356,14 @@
             >
               <h1 class="text">Have coupon?</h1>
               <div class="join">
-                <input id="coupon-input"
+                <input
+                  id="coupon-input"
                   class="input join-item w-3/4 border-2 border-slate-200 text-sm"
                   placeholder="Coupon Code"
                 />
                 <button
-                disabled
-                id="coupon-btn"
+                  disabled
+                  id="coupon-btn"
                   onclick="applyCoupon()"
                   class="btn join-item rounded-r-xl capitalize bg-color-primary text-white hover:bg-color-primary focus:outline-none disabled:text-slate-400 disabled:bg-slate-200"
                 >
@@ -346,7 +374,7 @@
             <div class="cart-container bg-white mt-8 rounded-xl px-2">
               <div class="cart-items-container px-5 py-5">
                 <ol
-                  class="cart-items list-decimal  list-inside border-b-2 border-slate-200 py-4 space-y-2"
+                  class="cart-items list-decimal list-inside border-b-2 border-slate-200 py-4 space-y-2"
                 >
                   <li>Home Cooker</li>
                   <li>Sports Cates</li>
@@ -363,9 +391,7 @@
                   </h2>
                   <h2>
                     Discount :
-                    <span id="discount" class="text-[#11111150]"
-                      >00.00 TK</span
-                    >
+                    <span id="discount" class="text-[#11111150]">00.00 TK</span>
                   </h2>
                   <h2>
                     Grand Total :
@@ -376,19 +402,16 @@
                 </div>
                 <div class="buy-cta text-center translate-y-[50%]">
                   <button
-                  id="buy-btn" disabled
-                    onclick="my_modal_2.showModal()"
+                    id="buy-btn"
+                    disabled
+                    onclick="my_modal_5.showModal()"
                     class="btn capitalize border-0 hover:bg-color-primary active:scale-105 bg-color-primary text-white px-3 py-2 rounded-xl w-11/12 disabled:text-slate-400 disabled:bg-slate-200"
                   >
                     Make Purchase
                   </button>
                   <!-- Open the modal using ID.showModal() method -->
-                  <dialog id="my_modal_2" class="modal">
-                    <form
-                      method="dialog"
-                      class="modal-box w-3/4 lg:w-5/12 p-5 px-10 lg:p-16"
-                    >
-                    <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+                  <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                    <form method="dialog" class="modal-box w-3/4 lg:w-5/12 p-5 px-10 lg:p-16">
                       <div
                         class="modal-content flex justify-center items-center flex-col space-y-4"
                       >
@@ -397,15 +420,16 @@
                         <p class="text-color-sub-title">
                           Your order is completed!
                         </p>
-                        <button
-                          class="btn text-white bg-color-primary hover:bg-color-primary px-8"
-                        >
-                          <a href="/">Go Home</a>
-                        </button>
+                        <div class="modal-action">
+                          <button
+                          onclick="resetWebsite()"
+                           class="btn text-white bg-color-primary hover:bg-color-primary px-8"
+                         >
+                           Go Home
+                         </button>
+                        </div>
                       </div>
-                    </form>
-                    <form method="dialog" class="modal-backdrop">
-                      <button></button>
+                      
                     </form>
                   </dialog>
                 </div>
